fix: add condition for letter-spacing units

--- a/src/styles/variables/typography.scss
+++ b/src/styles/variables/typography.scss
@@ -18,9 +18,9 @@ html {--font-family-body: "Roboto", sans-serif;
 --font-weight-default: 400;
 --font-weight-thick: 500;
 
---letter-spacing-medium: 2%;
---letter-spacing-none: 0%;
---letter-spacing-small: 1%;
+--letter-spacing-medium: 0.02em;
+--letter-spacing-none: 0;
+--letter-spacing-small: 0.01em;
 
 --line-height-1: 1.25rem;
 --line-height-2: 1.5rem;
